--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -24117,7 +24117,7 @@ comments</property>
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
                                     <property name="xalign">0</property>
-                                    <property name="label" translatable="yes">Inertia</property>
+                                    <property name="label" translatable="yes">Inertia M.</property>
                                   </widget>
                                   <packing>
                                     <property name="expand">False</property>
